--- a/README
+++ b/README
@@ -1,2 +1,14 @@
 ##### Publish to TEST #####
 aliyun oss cp doit-pay/target/doit-pay-0.0.1-SNAPSHOT.jar oss://doit-build-5263863254564512/doit-pay/doit-pay-0.0.1-SNAPSHOT.jar
+aliyun oss cp doit-api/target/doit-api-0.0.1-SNAPSHOT.jar oss://doit-build-5263863254564512/doit-api/doit-api-0.0.1-SNAPSHOT.jar
+
+
+
+ OrdRepayAmountRecord:
+ - (doit-manage) ChangeOrderService.manualOperationRepayOrder (insert)
+ - (doit-manage) ManOrderOrderService.getOverdueMoney (get) -> ordRepayAmoutRecord.getActualRepayAmout
+ - (doit-manage) ManOrderOrderService.byStagesBillInfo (get) -> ordRepayAmoutRecord.getActualRepayAmout
+ - (doit-pay)    PayService.manualOperationRepayOrder (insert) => Used by scheduler(disabled) & doit-pay /pay/manualRepayOrder
+ - (doit-pay) RepairOrderService.repairData  (insert)	=> Used by scheduler(disabled)
+ - (doit-pay) LoanInfoService.repaySuccessRecord (insert)
+ - (doit-api) IndexService.getOrderBills (get)  -> ordRepayAmoutRecord.getActualRepayAmout
